# BTL_LYSOARRAY_LO_G4

./: .gitignore  .gitmodules  Benchmark.sh  CMakeLists.txt  DefSubWrite.py  G4Args.cc  G4Args.hh  G4CompileScript.sh  G4CompileScriptCVMFS.sh  G4SimScript.sh  G4SimScriptCVMFS.sh  G4SimScriptCVMFSCopy.sh  G4SimScriptGC3.sh  G4SourceCVMFS.sh  G4sim.cc  G4sim.hh  Geant4Source.sh  JobAction.sh  JobActionCopy.sh  JobActionCopyGC3.sh  JobActionGC1FLResin.sh  JobActionGC3.sh  JobActionMuonCG1ResinFL.sh  JobActionMuonCG3.sh  Makefile  Makefile.localgmsh  Makefile.tier2  README.md  README.txt  SimScriptMuonCG1.sh  SimScriptMuonCG3.sh  SingAction.sh  SubmissionFile.sub  SubmissionFileCopySingLYSO.sub  SubmissionFileGC3.sub  SubmissionFileMuonCG1.sub  action.cc  action.hh  construction.cc  construction.hh  (+26 more)
JobFiles/: JobActionGC13mmResin.sh  JobActionGC13mmResinMuon.sh  JobActionGC1FLResin.sh  JobActionGC1FLResinMuon.sh  JobActionGC1FLResinMuonIncr.sh  JobActionGC1FLResinMuonIncrS.sh  JobActionGC1FLResinMuonIncrV.sh  JobActionGC1FLResinMuonIncrs2.sh  JobActionGC1FLResinMuonIncrv2.sh  JobActionGC1FLResinMuonMach.sh  JobActionGC3.sh  JobActionGC3CT.sh  JobActionGC3Incr.sh  JobActionGC3Muon.sh  JobActionGC3Muonrndi3.sh  JobActionMuonCG1Muon.sh  JobActionNSGATest.sh  JobActionNSGATestGmsh.sh  JobActionPyNSGA.sh  JobActionTestSingLocal.sh  JobActionTestYmult.sh
JobRelated/: G4SimScriptCVMFSCopy.sh  JobActionCG1.sh  SingAction.sh  SubmissionFile.sub  SubmissionFileCG1.sub  test.sh
NSGAII/: CMakeLists.txt  Makefile.chpc  parallelnsga2r.cpp
NSGAII/src_G4OptDefinition/: problemdef.cpp  problemdef.h
NotUsed/: G4SimScriptCVMFS.sh  G4SimScriptGC3.sh  SimScriptMuonCG1.sh  SimScriptMuonCG1ResinFL.sh  SubmissionFileCG3Muon.sub  SubmissionFileCopySingLYSO.sub  SubmissionFileMuonCG1ResinFL.sub
Py/: DefSubWrite.py  MainSubWrite.py
SubFiles/: AllJobSubmission.sh  NCTgt.sh  SingleJobSubmission.sh  SubDefaultName.sub  SubmissionFileGC13mmResin.sub  SubmissionFileGC13mmResinMuon.sub  SubmissionFileGC1FLResin.sub  SubmissionFileGC1FLResinMuon.sub  SubmissionFileGC1FLResinMuonIncr.sub  SubmissionFileGC3.sub  SubmissionFileGC3CT.sub  SubmissionFileGC3Muon.sub  SubmissionFileNSGA.sub  (+4 more)
(+31 files in other folders)
